Incorporación de vocabulario y arreglos de estructura stage 6

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -919,6 +919,8 @@ en:
       title_description: "Your advocacy strategy should describe the main actions that will be conducted in order to contribute to the desired change (interim outcome and advocacy objective). The types of actions are numerous and each action can contribute to different outcomes."
       subtitle1: "What will the ask for each actor?"
       subtitle1_explanation: "The Ask should be clear, concise, solution-focused, and tailored to each actor."
+      subtitle2: "What is the communication down a request to transmit the thrust of the intermediate result or according to the actors that you face?"
+      subtitle2_explanation: "A message is the communication down a request to transmit the thrust of the intermediate result according to the actor that may confront"
       data_entry: "Data Entry"
       explanation_examples: "Explanation & Examples"
       workshop_tips: "Workshop Tips"
@@ -931,12 +933,21 @@ en:
       error_updating_ask: "Error while updating ask information"
       error_creating_ask: "Error while creating ask information"
       confirm_delete_ask: "Are you sure you want to delete this ask?"
+      edit: "Edit"
+      delete: "Delete"
     asks_modal: # modal 'add ask' of stage 6
       asks: "Asks"
       actor: "Actor"
       ask: "Ask"
       ask_placeholder: "Write ask"
       execution: "Execution"
+      save_button: "Save"
+      cancel_button: "Cancel"
+    msj_modal: # modal 'add messages' of stage 6
+      menssage: "Menssage"
+      menssage_placeholder: " "
+      actors: "Select Actors to convey the message"
+      executed: "Executed"
       save_button: "Save"
       cancel_button: "Cancel"
     explanation_stage6: #tab `Explanation & Examples` of stage 6
