--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -32,8 +32,8 @@ es:
       button_demo: "Demo"
       button_read_more: "Quiero saber más acerca de esto"
       testimony: "Testimonios"
-      testimony1_txt: "Align advocacy width other areas and organization goals, both long and short term"
-      testimony1_signer: "UNICEF Ambassador Matt Dawson"
+      testimony1_txt: "La experiencia Estratega fue el comienzo para abordar el tema incidencia de forma sofisticada, profesional y con sentido. En TECHO-Chile estamos convencidos de que los problemas públicos deben abordarse desde un trabajo en conjunto, en donde la incidencia es un pilar fundamental. Con Estratega nos encontramos, no solo con un equipo de profesionales que nos orientaron hacia donde apuntar con nuestro trabajo, sino con personas convencidas de que el trabajo entre la sociedad civil es posible"
+      testimony1_signer: "José Manuel Tapia, Coordinador de Extensión CIS TECHO - Chile"
       testimony2_txt: "Align advocacy width other areas and organization goals, both long and short term"
       testimony2_signer: "Unicef Goodwill Ambassador Angélique Kidjo"
       testimony3_txt: "Align advocacy width other areas and organization goals, both long and short term"
