--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -34,8 +34,8 @@ es:
       testimony: "Testimonios"
       testimony1_txt: "La experiencia Estratega fue el comienzo para abordar el tema incidencia de forma sofisticada, profesional y con sentido. En TECHO-Chile estamos convencidos de que los problemas públicos deben abordarse desde un trabajo en conjunto, en donde la incidencia es un pilar fundamental. Con Estratega nos encontramos, no solo con un equipo de profesionales que nos orientaron hacia donde apuntar con nuestro trabajo, sino con personas convencidas de que el trabajo entre la sociedad civil es posible"
       testimony1_signer: "José Manuel Tapia, Coordinador de Extensión CIS TECHO - Chile"
-      testimony2_txt: "Align advocacy width other areas and organization goals, both long and short term"
-      testimony2_signer: "Unicef Goodwill Ambassador Angélique Kidjo"
+      testimony2_txt: "En mi experiencia con Estratega he observado como intenciones o deseos difusos se traducen en objetivos de política pública definidos y concretos, con indicadores de éxito y un itinerario de acciones claro que orienta la acción de incidencia. Esto ha resultado especialmente útil para nosotros dado que enfrentamos una agenda muy amplia donde es difícil encontrar criterios que permitan priorizar los objetivos y distribuir los esfuerzos de la organización"
+      testimony2_signer: "Octavio Del Favero, Coordinador Legislativo Fundación Ciudadano Inteligente"
       testimony3_txt: "Align advocacy width other areas and organization goals, both long and short term"
       testimony3_signer: "UNICEF Ambassador Matt Dawson"
       title_orgs: "Usan Estratega"
