--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -32,12 +32,12 @@ es:
       button_demo: "Demo"
       button_read_more: "Quiero saber más acerca de esto"
       testimony: "Testimonios"
-      testimony1_txt: "La experiencia Estratega fue el comienzo para abordar el tema incidencia de forma sofisticada, profesional y con sentido. En TECHO-Chile estamos convencidos de que los problemas públicos deben abordarse desde un trabajo en conjunto, en donde la incidencia es un pilar fundamental. Con Estratega nos encontramos, no solo con un equipo de profesionales que nos orientaron hacia donde apuntar con nuestro trabajo, sino con personas convencidas de que el trabajo entre la sociedad civil es posible"
+      testimony1_txt: "Estratega fue el comienzo para abordar el tema de incidencia de forma profesional y con sentido. Con Estratega nos encontramos, no solo con un equipo de profesionales que nos orientaron hacia dónde apuntar con nuestro trabajo, sino con personas convencidas de que el trabajo entre la sociedad civil es posible"
       testimony1_signer: "José Manuel Tapia, Coordinador de Extensión CIS TECHO - Chile"
-      testimony2_txt: "En mi experiencia con Estratega he observado como intenciones o deseos difusos se traducen en objetivos de política pública definidos y concretos, con indicadores de éxito y un itinerario de acciones claro que orienta la acción de incidencia. Esto ha resultado especialmente útil para nosotros dado que enfrentamos una agenda muy amplia donde es difícil encontrar criterios que permitan priorizar los objetivos y distribuir los esfuerzos de la organización"
+      testimony2_txt: "Con Estratega he observado cómo intenciones se traducen en objetivos de política pública definidos y concretos, con indicadores de éxito y un itinerario de acciones claro que orienta la acción de incidencia. Esto nos ha permitido priorizar los objetivos y distribuir los esfuerzos de la organización"
       testimony2_signer: "Octavio Del Favero, Coordinador Legislativo Fundación Ciudadano Inteligente"
-      testimony3_txt: "Align advocacy width other areas and organization goals, both long and short term"
-      testimony3_signer: "UNICEF Ambassador Matt Dawson"
+      testimony3_txt: "Estratega me ha servido para identificar y ponderar todos los factores que influyen en el éxito de una planificación de incidencia teniendo muy claro qué es lo que se quiere conseguir. Esto nos ha permitido planificar con el nivel de detalle y orden cronológico que requiere el logro de cada uno de nuestros objetivos"
+      testimony3_signer: "Danae Fuentes, Encargada de Incidencia en Políticas Públicas Hogar de Cristo"
       title_orgs: "Usan Estratega"
       guest_main_txt: "Reduce los riesgos y aumenta el desempeño de tu equipo al momento de incidir en políticas públicas"
       sign_up: "Registrate"
