add Person In Charge(as string) to Ask model #75

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -940,6 +940,8 @@ en:
       actor: "Actor"
       ask: "Ask"
       ask_placeholder: "Write ask"
+      person_in_charge: "Person In Charge"
+      person_in_charge_placeholder: "Write Person In Charge"
       execution: "Execution"
       save_button: "Save"
       cancel_button: "Cancel"
