added Activity-Actors relation and multiple select for actors in activity_modal #75

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -683,6 +683,7 @@ en:
       outcome: "Outcome"
       save_button: "Save"
       cancel_button: "Cancel"
+      actors_label: "Select Actor(s)"
     modal_indicator:
       owner_name: "Owner"
       owner_role: "Role"
