--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -542,6 +542,9 @@ en:
       error_updating_outcome: "Error while updating the outcome information"
       error_creating_outcome: "Error while creating the outcome information"
       confirm_delete_outcome: "Are you sure you want to delete this outcome?"
+      theoryofchange: "Theory of Change"
+      outcome_group: "Grouping"
+      theoryofchange_tooltip: "Drag and Drop Interim Outcomes to sort and group them to fit your needs" 
     outcome_modal:  # modal `add new interim outcome` of stage 4
       new_interim_outcome: "New Interim Outcome"
       interim_outcome: "Interim Outcome"
