--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -544,7 +544,7 @@ en:
       confirm_delete_outcome: "Are you sure you want to delete this outcome?"
       theoryofchange: "Theory of Change"
       outcome_group: "Grouping"
-      theoryofchange_tooltip: "Drag and Drop Interim Outcomes to sort and group them to fit your needs" 
+      theoryofchange_tooltip: "Drag and Drop Interim Outcomes to sort and group them to fit your needs"
     outcome_modal:  # modal `add new interim outcome` of stage 4
       new_interim_outcome: "New Interim Outcome"
       interim_outcome: "Interim Outcome"
@@ -1007,6 +1007,7 @@ en:
       confirm_delete_ask: "Are you sure you want to delete this ask?"
       edit: "Edit"
       delete: "Delete"
+      confirm_delete_msj: "Are you sure you want to delete this message?"
   user_mailer:
     exist_user_share:
       exist_add_to_share: 'You are invited to collaborate in the project:'
