--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -587,7 +587,7 @@ es:
         - 'Actitudes y creencias'
         - 'Relevancia'
         - 'Conciencia'
-        - 'Nuevos campeones'
+        - 'Líderes de opinión'
         - 'Nuevos defensores'
         - 'Asociaciones o alianzas'
         - 'Circunscripción o base de apoyo en crecimiento'
