fixed models association for activities

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -699,6 +699,7 @@ en:
       save_button: "Save"
       cancel_button: "Cancel"
       actors_label: "Select Actor(s)"
+      place: "Place"
     modal_indicator:
       owner_name: "Owner"
       owner_role: "Role"
