Translated landing page and layouts in general

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -19,6 +19,26 @@ en:
       footer_phone_number_txt: "+56 2 2419 2770"
       footer_email_txt: "Press Contact"
       footer_address_txt: "Holanda 895, Providencia, Santiago"
+    navbar_signin:
+      sign_in: "Sign in"
+    sign_in:
+      mail: "E-mail"
+      password: "Password"
+      remember_me: "Remember me"
+      sign_in: "Sign in"
+      forgot_password: "Forgot your password?"
+    footer:
+      estratega_description: "Estratega is an advocacy planning methodology that reduces risks and enhances your team's performance"
+      contact: "Contact"
+      mail: "Mail"
+      mailing_adress: "lab@ciudadanointeligente.org"
+      office_adress: "Holanda 895, Providencia"
+    application:
+      home: "Home"
+      projects: "Projects"
+      welcome: "Welcome, "
+      my_account: "My account"
+      sign_out: "Sign out"
   #
   # Home
   #
@@ -27,17 +47,18 @@ en:
       main_txt: "Benefits"
       sentence_resources: "Effective use for your resources"
       sentence_risks: "Minimize risks and maximize opportunities"
-      sentence_advocacy: "Align advocacy width other areas and organization goals, both long and short term"
+      sentence_advocacy: "Align advocacy with other areas and organization goals, both long and short term"
       sentence_keep_track: "Keep track and evaluate your performance"
       button_demo: "Demo"
       button_read_more: "I want to read more about it"
-      testimony1_txt: "Align advocacy width other areas and organization goals, both long and short term"
-      testimony1_signer: "UNICEF Ambassador Matt Dawson"
-      testimony2_txt: "Align advocacy width other areas and organization goals, both long and short term"
-      testimony2_signer: "Unicef Goodwill Ambassador Angélique Kidjo"
-      testimony3_txt: "Align advocacy width other areas and organization goals, both long and short term"
-      testimony3_signer: "UNICEF Ambassador Matt Dawson"
-      guest_main_txt: "Marcel, you are the best!"
+      testimony: "Testimonies"
+      testimony1_txt: "Estratega fue el comienzo para abordar el tema de incidencia de forma profesional y con sentido. Con Estratega nos encontramos, no solo con un equipo de profesionales que nos orientaron hacia dónde apuntar con nuestro trabajo, sino con personas convencidas de que el trabajo entre la sociedad civil es posible"
+      testimony1_signer: "José Manuel Tapia, Coordinador de Extensión CIS TECHO - Chile"
+      testimony2_txt: "Con Estratega he observado cómo intenciones se traducen en objetivos de política pública definidos y concretos, con indicadores de éxito y un itinerario de acciones claro que orienta la acción de incidencia. Esto nos ha permitido priorizar los objetivos y distribuir los esfuerzos de la organización"
+      testimony2_signer: "Octavio Del Favero, Coordinador Legislativo Fundación Ciudadano Inteligente"
+      testimony3_txt: "Estratega me ha servido para identificar y ponderar todos los factores que influyen en el éxito de una planificación de incidencia teniendo muy claro qué es lo que se quiere conseguir. Esto nos ha permitido planificar con el nivel de detalle y orden cronológico que requiere el logro de cada uno de nuestros objetivos"
+      testimony3_signer: "Danae Fuentes, Encargada de Incidencia en Políticas Públicas Hogar de Cristo"
+      guest_main_txt: "Ensure your impact by planning chain actions"
       sign_up: "Sign up"
       email_placeholder: "Email"
       password_placeholder: "Password"
